--- a/nginx-config.conf
+++ b/nginx-config.conf
@@ -76,7 +76,7 @@ server {
         # Configuración específica para APKs
         location ~* \.apk$ {
             add_header Content-Type application/vnd.android.package-archive;
-            add_header Content-Disposition 'attachment; filename="$basename"';
+            add_header Content-Disposition 'attachment';
         }
         
         # Configuración para imágenes
